began implementing new view